--- a/index.html
+++ b/index.html
@@ -254,6 +254,6 @@
       </button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
